<resources>
  <string name="app_name">Fundamental</string>
  <string name="panjang">Panjang</string>
  <string name="lebar">Lebar</string>
  <string name="tinggi">Tinggi</string>
  <string name="hasil">Hasil</string>
  <string name="hitung">Hitung</string>
  <string name="pindah_activity_dengan_data">Pindah Activity Dengan Data</string>
  <string name="pindah_activity_dengan_object">Pindah Activity Dengan Object</string>
  <string name="buka_dial_number">Buka Dial Number</string>
  <string name="pindah_activity_dengan_result">Pindah Activity Dengan Result</string>
  <string name="pindah_activity">Pindah Activity</string>
  <string name="ini_adalah_intent_tanpa_value">Ini Adalah Intent Tanpa Value</string>
  <string name="option_menu">Option Menu</string>
  <string name="ini_adalah_intent_dengan_object">ini adalah intent dengan object</string>
  <string name="ini_adalah_intent_result">Ini adalah intent result</string>
  <string name="_300">300</string>
  <string name="_200">200</string>
  <string name="_100">100</string>
  <string name="_50">50</string>
  <string name="choose">Choose :</string>
  <string name="submit">Submit</string>
  <string name="result_from_activity">Result From Activity</string>
  <string name="hello_world">Hello World</string>
  <string name="set_value">Set Value</string>
  <string name="pindah_ke_menu_fragment">Pindah ke Menu Fragment</string>
  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="hello_home_fragment">Hello Home Fragment</string>
  <string name="to_category">To Category</string>
  <string name="ini_adalah_fragment">Ini adalah fragment</string>
  <string name="this_category">This Category</string>
  <string name="catogory_lifestyle">Catogory Lifestyle</string>
  <string name="category_name">Category Name</string>
  <string name="category_description">Category Description</string>
  <string name="to_profile">To Profile</string>
  <string name="show_dialog">Show Dialog</string>
  <string name="question_coach">Question Coach</string>
  <string name="sir_alex_ferguson">Sir Alex Ferguson</string>
  <string name="jose_mourinho">Jose Mourinho</string>
  <string name="david_moyes">David Moyes</string>
  <string name="close">Close</string>
</resources>