<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:padding="15dp"
  tools:context=".MainMenuActivity">

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginBottom="20dp"
    android:text="@string/option_menu"
    android:textColor="@color/black"
    android:textSize="30sp"
    android:textStyle="bold" />

  <Button
    android:id="@+id/btn_nvalue"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:text="@string/pindah_activity" />

  <Button
    android:id="@+id/btn_value"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:text="@string/pindah_activity_dengan_data" />

  <Button
    android:id="@+id/btn_object"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:text="@string/pindah_activity_dengan_object" />

  <Button
    android:id="@+id/btn_dial"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:text="@string/buka_dial_number" />

  <Button
    android:id="@+id/btn_result"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:text="@string/pindah_activity_dengan_result" />

  <Button
    android:id="@+id/btn_fragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:text="@string/pindah_ke_menu_fragment"/>

  <TextView
    android:id="@+id/tv_result_activity"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginBottom="30dp"
    android:text="@string/result_from_activity"
    android:textColor="@color/black"
    android:textSize="20sp" />

  <TextView
    android:id="@+id/tv_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:text="@string/hello_world"
    android:textColor="@color/black"
    android:textSize="20sp" />

  <Button
    android:id="@+id/btn_set_value"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/set_value"
    android:layout_gravity="center"/>

</LinearLayout>