<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="16dp"
  tools:context=".VolumeActivity"
  tools:viewBindingIgnore="true"
  android:orientation="vertical">

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/panjang" />

  <EditText
    android:id="@+id/et_length"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:autofillHints="1"
    android:inputType="numberDecimal"
    android:lines="1"
    android:minHeight="48sp"
    tools:ignore="LabelFor" />

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/lebar" />

  <EditText
    android:id="@+id/et_width"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:autofillHints="1"
    android:inputType="numberDecimal"
    android:lines="1"
    android:minHeight="48dp"
    tools:ignore="LabelFor"
    android:editable="true"/>

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/tinggi" />

  <EditText
    android:id="@+id/et_height"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:autofillHints="1"
    android:inputType="numberDecimal"
    android:lines="1"
    android:minHeight="48dp"
    tools:ignore="LabelFor"
    android:editable="true"/>

  <Button
    android:id="@+id/btn_calculate"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:text="@string/hitung" />

  <TextView
    android:id="@+id/tv_ressult"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:text="@string/hasil"
    android:textSize="24sp"
    android:textStyle="bold" />


</LinearLayout>